--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,45 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+<!--        <item name="spinnerDropDownItemStyle">@style/SpinnerStyle</item>-->
+<!--        <item name="spinnerStyle">@style/MySpinnerStyle</item>-->
+    </style>
+
+    <style name="Box">
+        <item name="android:background">@drawable/bg_box</item>
+<!--        <item name="android:layout_margin">5dp</item>-->
+        <item name="android:layout_marginEnd">5dp</item>
+        <item name="android:layout_marginStart">5dp</item>
+    </style>
+
+    <style name="ValueMedium">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:background">@drawable/bg_border_bot</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="GreenBoxValue">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">16dp</item>
+    </style>
+
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.DropDownItem.Spinner">
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:useDefaultMargins">false</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
+    <style name="MySpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:useDefaultMargins">false</item>
     </style>
 
 </resources>
