--- a/app/src/main/res/layout/fragment_cog_settings.xml
+++ b/app/src/main/res/layout/fragment_cog_settings.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:id="@+id/cog_settings"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
@@ -58,7 +58,7 @@
                 <TextView
                     android:id="@+id/cog_s_tv_scalesdistance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/cog_s_scalesdistance" />
 
@@ -85,7 +85,7 @@
                 <TextView
                     android:id="@+id/cog_s_tv_distancefront"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/cog_s_distancefront_1" />
 
@@ -111,7 +111,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="@string/cog_s_distancetarget" />
 
@@ -134,13 +134,15 @@
 
         <ImageView
             android:id="@+id/cog_s_iv_type"
-            android:layout_width="406dp"
-            android:layout_height="190dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="12:7"
             android:layout_marginStart="32dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cog_settings"
-            app:srcCompat="@drawable/img_sc_bugfahrwerk" />
+            app:srcCompat="@drawable/img_cg_spornfahrwerk" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
