--- a/app/src/main/res/layout/fragment_rudder.xml
+++ b/app/src/main/res/layout/fragment_rudder.xml
@@ -1,19 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_dashboard"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/rudder_rg_type"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:checkedButton="@id/radioButton"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/rudder_rb_type_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/rudder_type_1" />
+
+        <RadioButton
+            android:id="@+id/rudder_rb_type_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/rudder_type_2" />
+
+    </RadioGroup>
+
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_marginEnd="1dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rudder_rg_type">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_sensor_a" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_angle" />
+
+            <TextView
+                android:id="@+id/rudder_tv_angle_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0,0°" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_rudderway" />
+
+            <TextView
+                android:id="@+id/rudder_tv_way_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0mm" />
+
+            <TextView
+                android:id="@+id/rudder_tv_tara_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_tara" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_sensor_diff" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_angle" />
+
+            <TextView
+                android:id="@+id/rudder_tv_angle_diff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0,0°" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_rudderway" />
+
+            <TextView
+                android:id="@+id/rudder_tv_way_diff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0mm" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_sensor_b" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_angle" />
+
+            <TextView
+                android:id="@+id/rudder_tv_angle_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0,0°" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_rudderway" />
+
+            <TextView
+                android:id="@+id/rudder_tv_way_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="0mm" />
+
+            <TextView
+                android:id="@+id/rudder_tv_tara_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rudder_tara" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/rudder_tv_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:text="@string/rudder_record"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/rudder_canvas"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/rudder_tv_record" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
