--- a/app/src/main/res/layout/fragment_cog_settings.xml
+++ b/app/src/main/res/layout/fragment_cog_settings.xml
@@ -58,12 +58,44 @@
                 <TextView
                     android:id="@+id/cog_s_tv_scalesdistance"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:drawableEnd="@drawable/ic_info_outline_black_24dp"
+                    android:gravity="center|start"
+                    android:layout_gravity="center"
                     android:text="@string/cog_s_scalesdistance" />
 
                 <EditText
                     android:id="@+id/cog_s_et_scalesdistance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="4"
+                    android:gravity="right"
+                    android:inputType="number" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="2"
+                    android:text="mm" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/cog_s_tv_scale1_heigh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableEnd="@drawable/ic_info_outline_black_24dp"
+                    android:gravity="center|start"
+                    android:layout_gravity="center"
+                    android:text="@string/cog_s_scale1_height" />
+
+                <EditText
+                    android:id="@+id/cog_s_et_scale1_height"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="4"
@@ -85,8 +117,11 @@
                 <TextView
                     android:id="@+id/cog_s_tv_distancefront"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:drawableEnd="@drawable/ic_info_outline_black_24dp"
+                    android:gravity="center|start"
+                    android:layout_gravity="center"
                     android:text="@string/cog_s_distancefront_1" />
 
                 <EditText
@@ -110,9 +145,13 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/cog_s_tv_distancetarget"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_weight="1"
+                    android:drawableEnd="@drawable/ic_info_outline_black_24dp"
+                    android:gravity="center|start"
                     android:text="@string/cog_s_distancetarget" />
 
                 <EditText
