--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,21 +3,21 @@
 
     <item
         android:id="@+id/navigation_cog"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_cog"
         android:title="@string/title_centergravity" />
 
     <item
         android:id="@+id/navigation_rudder"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_compare_black_24dp"
         android:title="@string/title_rudder" />
 
     <item
         android:id="@+id/navigation_ewd"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_vertical_align_center_black_24dp"
         android:title="@string/title_ewd" />
 
     <item
         android:id="@+id/navigation_calibrate"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_perm_data_setting_black_24dp"
         android:title="@string/title_calibrate" />
 </menu>
