--- a/app/src/main/res/menu/menu_cog.xml
+++ b/app/src/main/res/menu/menu_cog.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/navigation_cog_settings"
-        android:icon="@android:drawable/ic_menu_manage"
+        android:icon="@drawable/ic_settings_white_24dp"
         android:menuCategory="alternative"
         android:title="@string/title_cog_settings"
         app:showAsAction="always|withText" />
