--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,8 +24,17 @@
     <fragment
         android:id="@+id/navigation_rudder"
         android:name="de.abg.pamf.ui.rudder.RudderFragment"
-        android:label="@string/title_rudder" />
+        android:label="@string/title_rudder" >
+        <action
+            android:id="@+id/action_navigation_rudder_to_navigation_rud_settings"
+            app:destination="@id/navigation_rud_settings" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/navigation_rud_settings"
+        android:name="de.abg.pamf.ui.rudder.RudderSettingsFragment"
+        android:label="@string/title_rudder_settings"
+        tools:layout="@layout/fragment_rudder_settings" />
     <fragment
         android:id="@+id/navigation_ewd"
         android:name="de.abg.pamf.ui.ewd.EwdFragment"
@@ -34,5 +43,20 @@
     <fragment
         android:id="@+id/navigation_calibrate"
         android:name="de.abg.pamf.ui.calibrate.CalibrateFragment"
-        android:label="@string/title_calibrate" />
+        android:label="@string/title_calibrate" >
+        <action
+            android:id="@+id/action_navigation_calibrate_to_navigation_calibrate_scale"
+            app:destination="@id/navigation_calibrate_scale" />
+        <action
+            android:id="@+id/action_navigation_calibrate_to_navigation_calibrate_tilt"
+            app:destination="@id/navigation_calibrate_tilt" />
+    </fragment>
+    <fragment
+        android:id="@+id/navigation_calibrate_scale"
+        android:name="de.abg.pamf.ui.calibrate.CalibrateScaleFragment"
+        android:label="@string/title_calibrate_scale" />
+    <fragment
+        android:id="@+id/navigation_calibrate_tilt"
+        android:name="de.abg.pamf.ui.calibrate.CalibrateTiltSensorFragment"
+        android:label="@string/title_calibrate_tilt" />
 </navigation>
