--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
 
     <color name="cellBorder">#a0a0ff</color>
     <color name="greenBackground">#9fd85f</color>
+    <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="red">#ffcc0000</color>
+    <color name="red_diff">#ffff0000</color>
+    <color name="ltgrey">#ffcccccc</color>
+    <color name="blue">#ff0000ff</color>
+    <color name="green">#ff00ff00</color>
 </resources>
