--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,12 +21,42 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">16dp</item>
         <item name="android:background">@drawable/bg_border_bot</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingStart">5dp</item>
+        <item name="android:paddingEnd">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+    </style>
+    <style name="ValueMediumNoBot" parent="ValueMedium">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:paddingBottom">0dp</item>
+    </style>
+
+    <style name="ValueLarge" parent="ValueMedium">
+        <item name="android:textSize">24dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:maxLines">1</item>
+    </style>
+    <style name="ValueXLarge" parent="ValueLarge">
+        <item name="android:textSize">32dp</item>
     </style>
 
     <style name="GreenBoxValue">
         <item name="android:textColor">#fff</item>
         <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="GreenButton">
+        <item name="android:background">@drawable/btn_green</item>
+        <item name="android:padding">6dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
     </style>
 
 
